fix flashcard svg in dark mode for chimie

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2289,6 +2289,9 @@ button,
   height: 100% !important;
   object-fit: contain;
 }
+body.dark-mode .flashcard img.svg-dark {
+  filter: invert(1);
+}
 
 
 /* Dark mode overrides */
